# dynamic_timetable_scheduler

./: Cargo.toml  setup.sh
public/: index.html
src/: api_error.rs  app_state.rs  lib.rs  main.rs
src/application/: algorithm.rs  constraint_evaluator.rs  mod.rs
src/domain/: constraint.rs  item.rs  mod.rs  schedule.rs
src/json_types/: mod.rs
src/routes/: constraints.rs  items.rs  members.rs  mod.rs  solve.rs
