[package]
name = "scheduling-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tower = {version = "*"}
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
